# mockall-example-rs

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: lib.rs  use_case.rs
app/tests/: test_use_case_search_users.rs
app/tests/fixture/: mod.rs
app/tests/test_repositories/: mod.rs
domain/: Cargo.toml
domain/src/: email_address.rs  error.rs  lib.rs  repositories.rs  user.rs
domain/src/error/: error_type.rs
domain/src/user/: user_id.rs  user_name.rs  user_repository.rs
domain/src/user/user_name/: user_first_name.rs  user_last_name.rs
infra/: Cargo.toml
infra/src/: id_generator.rs  main.rs  persistence.rs  repository_impls.rs
infra/src/persistence/: yaml.rs
infra/src/persistence/yaml/: repository_impl.rs  user_yaml_storage.rs
infra/src/persistence/yaml/repository_impl/: user_repository_impl.rs
infra/src/repository_impls/: user_repository_impl.rs
infra/src/ui/: cli.rs
interface-adapter/: Cargo.toml
interface-adapter/src/: controller.rs  lib.rs  repositories.rs
interface-adapter/src/controller/: dto.rs
