[package]
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
edition = "2018"
name = "domain"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mock = ["mockall"
]


[dependencies]
serde = {version = "1.0", features = ["derive"]}

mockall = {version = "0.9", optional = true}
