[package]
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
edition = "2018"
name = "infra"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = {path = "../domain"}
interface-adapter = {path = "../interface-adapter"}

clap = "3.0.0-beta.2"
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
